# merkle_tree

./: .gitignore  Cargo.toml
src/: hasher.rs  lib.rs  merkle_tree.rs  tests.rs  utility.rs
src/bitcoin/: hash.rs  mod.rs  tests.rs
src/bitcoin/test_files/: test_block_893_557.json  test_block_896_000.json  test_block_896_001.json  test_block_896_599.json  test_block_x.json
