[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
sha2 = { version = "0.10.8", optional = true } # bitcoin

# optional test dependencies:
reqwest = { version = "0.12", features = ["json"], optional = true } # bitcoin_test
tokio = { version = "1", features = ["full"], optional = true }      # bitcoin_test
serde = { version = "1.0", features = ["derive"], optional = true }  # bitcoin_test
serde_json = { version = "1.0.140", optional = true }                # bitcoin_test

[dev-dependencies]
rand = "0.9.0"

[features]
default = ["unsecure", "bitcoin"]

bitcoin = ["sha2", "bitcoin_test"]
bitcoin_test = ["reqwest", "tokio", "serde", "serde_json"]
serde = ["dep:serde"]

unsecure = []
